fixed frontmatter pagination
pushing all content before the toc to the right page

--- a/src/frontmatter/frontmatter.tex
+++ b/src/frontmatter/frontmatter.tex
@@ -8,25 +8,24 @@
 
 \frontmatter
 \thispagestyle{empty}
-\clearpage\null
-\newpage
+\clearpage\null\newpage
 \pagestyle{plain}
 
 \pagenumbering{roman}
 \setcounter{page}{1}
 
 \input{./src/frontmatter/abstract.tex}
-\newpage
+\clearpage\null\newpage
 
 \input{./src/frontmatter/preface.tex}
-\newpage
+\clearpage\null\newpage
 
 \input{./src/frontmatter/restriction-notice.tex}
-\newpage
+\clearpage\null\newpage
 
 % Table of Contents
 \tableofcontents
-\newpage
+\clearpage\null\newpage
 
 \addcontentsline{toc}{chapter}{Listen}
 
