added clear to right page

--- a/src/frontmatter/frontmatter.tex
+++ b/src/frontmatter/frontmatter.tex
@@ -15,36 +15,34 @@
 \setcounter{page}{1}
 
 \input{./src/frontmatter/abstract.tex}
-\clearpage\null\newpage
+\cleartorightpage
 
 \input{./src/frontmatter/preface.tex}
-\clearpage\null\newpage
+\cleartorightpage
 
 \input{./src/frontmatter/restriction-notice.tex}
-\clearpage\null\newpage
+\cleartorightpage
 
 % Table of Contents
 \tableofcontents
-\clearpage\null\newpage
+\newpage
 
-\addcontentsline{toc}{chapter}{Listen}
+% \addcontentsline{toc}{chapter}{Verzeichnisse}
 
 % Table of Tables
 \listoftables
-
 \newpage
 
 % Table of Figures
 \listoffigures
-
 \newpage
+
 % Equations list
 \listofequations
-
 \newpage
+
 % Sourcecode list
 \lstlistoflistings
-
 \newpage
 
 % Acronyms
