added cpp macro

--- a/src/mainmatter/reference/reference.tex
+++ b/src/mainmatter/reference/reference.tex
@@ -6,6 +6,19 @@ Damit diese Sektion einen realistischen Anblick erhält, werden die Beispiele mi
 
 \section{Inhalte}
 
+\subsection{Symbole}
+
+Diese Template enthält eigene Symbole für verschiedene Dinge, wie zum Beispiel die Programmiersprache \cpp.
+Ein anderes Symbol ist der Asterismus, gekennzeichnet durch drei zentrierte Sterne.
+Dieser kann als typografischer Dinkus verwendet werden um nach einem Paragrafen zu symbolisieren, dass ein neuer unzusammenhängender Abschnitt beginnt.
+
+\threeast
+
+\enquote{S Nibelungenliad is as bekanntaste boarische und deitsche Hejdnepos (\enquote{Liad} hod im Oidboarischn aa de Bedeitung \enquote{Saga}). Gschriebm worn is am Ofang vom 13. Joarhundat in Boarisch-Middlhochdeitsch.
+Es is de Gschicht vom Untagang vom Voik vo de Burgunda, vo da Eamoadung vom Hejdn Siegfried und vo da bluadign Rache vo seim Weib Kriemhild.}
+So der Wikipedia Eintrag für das Niebelungenlied auf bayrisch.
+Ein Beispiel für den fehlenden Zusammenhang der Paragrafen innerhalb eines Abschnittes markiert durch den Dinkus.
+
 \subsection{Listen}
 
 Für weitere Informationen zur \enquote{korrekten} Nutzung von \LaTeX\ werden folgende Ressourcen vorgeschlagen:
