--- a/src/preamble/imports/macros.tex
+++ b/src/preamble/imports/macros.tex
@@ -22,6 +22,8 @@
 \end{center}
 }%
 
+\def\cpp{{C\nolinebreak[4]\hspace{-.05em}\raisebox{.4ex}{\tiny\textbf{++}}}}%
+
 % clearpage to get to left
 \newcommand*\cleartoleftpage{%
 \clearpage
