added equation captions

--- a/src/mainmatter/reference/reference.tex
+++ b/src/mainmatter/reference/reference.tex
@@ -186,19 +186,19 @@ Es folgt nun eine Tabelle in \autoref{tab:prefix-table}.
 
 Die Riemannsche Zeta-Funktion ist in \autoref{eq:exampleEquation} aufgeführt.
 
+\setequationentry{Riemannsche Zeta-Funktion.}
 \begin{equation}
-\begin{gathered}
-    \setequationentry{Riemannsche Zeta-Funktion}
-\zeta(s) = \sum_{n=1}^{\infty} \frac{1}{n^s} = \frac{1}{1^s} + \frac{1}{2^s} + \frac{1}{3^s} + \ldots \\[2ex]
-\text{für } \Re(s) > 1 \text{ und dessen analytischer Kontinuation}
-\end{gathered}
-\label{eq:exampleEquation}
+    \begin{gathered}
+        \zeta(s) = \sum_{n=1}^{\infty} \frac{1}{n^s} = \frac{1}{1^s} + \frac{1}{2^s} + \frac{1}{3^s} + \ldots \\[2ex]
+        \text{für } \Re(s) > 1 \text{ und dessen analytischer Kontinuation}
+    \end{gathered}
+    \label{eq:exampleEquation}
 \end{equation}
 
 Eine einfachere Formel wird in \autoref{eq:sqrt} gezeigt.
 
+\setequationentry[Text in der Caption des Satz des Pythagoras.]{Gleichungsverzeichniseintrag des Satz des Pythagoras}
 \begin{equation}
-    \setequationentry{Satz des Pythagoras}
     c = \sqrt{a^{2} + b^{2}}
     \label{eq:sqrt}
 \end{equation}
@@ -226,8 +226,8 @@ double example (double(*f)(double)) {
 \end{lstlisting}
 
 \lstinputlisting[
-    linerange={215-222}, % actual line numbers in this file
-    firstnumber=215,
+    linerange={228-235}, % actual line numbers in this file
+    firstnumber=228,
     caption={\texttt{./reference.tex} Beispiel zum Einbetten von Quellcode aus einer Datei},
     language=TeX,
     label=code:latex,
