--- a/src/preamble/imports/code.tex
+++ b/src/preamble/imports/code.tex
@@ -4,6 +4,7 @@
 \usepackage{listings}
 \renewcommand{\lstlistlistingname}{Quellcodeverzeichnis}
 \renewcommand\lstlistingname{Quellcode} % Change language of section name
+\captionsetup[lstlisting]{labelformat=standard, labelsep=colon}
 \lstset{ % General setup for the package
     language=C++,
     rangeprefix=//\ ---\ ,rangesuffix=\ ---,
