--- a/src/frontmatter/frontmatter.tex
+++ b/src/frontmatter/frontmatter.tex
@@ -46,9 +46,7 @@
 \newpage
 
 % Acronyms
-\setglossarystyle{listdotted}
-\setglossarystyle{tree}
 \setglossarysection{section}
-\printacronyms
+\printacronyms[style=alttree2]
 
 \cleartoleftpage
