changed glossary spacing

--- a/src/mainmatter/reference/reference.tex
+++ b/src/mainmatter/reference/reference.tex
@@ -43,7 +43,7 @@ Diese kann man in dem \gls{glossary} finden.
 Zum ersten Aufruf eines \gls{acr}, wird dieses ausgeschrieben.
 Weitere Aufrufe zeigen nur die Kurzfassung (\glsxtrshort{acr}) an.
 Jedes Akronym ist auch ein Hyperlink und führt, solange der PDF-Reader dies unterstützt, zurück zur Definition.
-Ein Akronym mit langem Eintrag: \gls{test} \gls{abc} \gls{def} \gls{g}
+Ein Akronym mit langem Eintrag: \gls{test} \gls{abc} \gls{def} \gls{g} \gls{acr1} \gls{acr2}
 
 \subsection{Abbildungen}
 
