--- a/src/preamble/imports/setup.tex
+++ b/src/preamble/imports/setup.tex
@@ -24,7 +24,7 @@
 % UTILITY PACKAGES
 \usepackage{lipsum}% lorem ipsum blind text
 \usepackage{blindtext}% blind document
-
+\usepackage{multicol}
 \usepackage{tabto}% tab charachters
 \usepackage{setspace}% line spacing
 \usepackage{hologo}% Logos of LaTeX and friends
@@ -33,7 +33,7 @@
 \usepackage[inline]{enumitem}% lists and enumerations
 \setlist{itemsep=0em, parsep=0em} % remove inter-item spacing
 
-\usepackage{url}% URLs
+\usepackage{xurl}% URLs
 \usepackage{pdfpages}% insert external pdfs
 \usepackage{letltxmacro}% robust macros for sqrt
 \usepackage{ifplatform}% check current platform
